--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ca",
   "version": "0.0.1",
   "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "productName": "Module de correction assistée",
   "author": "Martin Pare <martin.pare@softinov.com>",
   "type": "module",
   "private": true,
